exports[`test should render with a full size 1`] = `
<pure(CardPure)
  data={
    Object {
      "description": "Testing the frequency profile",
      "id": "asdf-123",
      "subtitle": "Whats up",
      "title": "Test frequency",
    }
  }
  size="full">
  <Styled()
    alignItems="center"
    justifyContent="flex-start">
    <Styled()
      direction="column"
      justifyContent="center">
      <styled.h3>
        Test frequency
      </styled.h3>
      <styled.h4>
        Whats up
      </styled.h4>
    </Styled()>
  </Styled()>
  <styled.p>
    Testing the frequency profile
  </styled.p>
  <Styled()>
    <Styled()>
      Follow
    </Styled()>
  </Styled()>
  <Apollo(branch(pure(MetaDataPure)))
    id="asdf-123"
    type="frequency" />
</pure(CardPure)>
`;

exports[`test should render with a large size 1`] = `
<pure(CardPure)
  data={
    Object {
      "description": "Testing the frequency profile",
      "id": "asdf-123",
      "subtitle": "Whats up",
      "title": "Test frequency",
    }
  }
  size="large">
  <Styled()
    alignItems="center"
    justifyContent="flex-start">
    <Styled()
      direction="column"
      justifyContent="center">
      <styled.h3>
        Test frequency
      </styled.h3>
      <styled.h4>
        Whats up
      </styled.h4>
    </Styled()>
  </Styled()>
  <styled.p>
    Testing the frequency profile
  </styled.p>
  <Styled()>
    <Styled()>
      Follow
    </Styled()>
  </Styled()>
  <Apollo(branch(pure(MetaDataPure)))
    id="asdf-123"
    type="frequency" />
</pure(CardPure)>
`;

exports[`test should render with a medium size 1`] = `
<pure(CardPure)
  data={
    Object {
      "description": "Testing the frequency profile",
      "id": "asdf-123",
      "subtitle": "Whats up",
      "title": "Test frequency",
    }
  }
  size="medium">
  <Styled()
    alignItems="center"
    justifyContent="flex-start">
    <Styled()
      direction="column"
      justifyContent="center">
      <styled.h3>
        Test frequency
      </styled.h3>
      <styled.h4>
        Whats up
      </styled.h4>
    </Styled()>
  </Styled()>
  <styled.p>
    Testing the frequency profile
  </styled.p>
  <Styled()>
    <Styled()>
      Follow
    </Styled()>
  </Styled()>
</pure(CardPure)>
`;

exports[`test should render with a mini size 1`] = `
<pure(CardPure)
  data={
    Object {
      "description": "Testing the frequency profile",
      "id": "asdf-123",
      "subtitle": "Whats up",
      "title": "Test frequency",
    }
  }
  size="mini">
  <Styled()
    alignItems="center"
    justifyContent="flex-start">
    <Styled()
      direction="column"
      justifyContent="center">
      <styled.h3>
        Test frequency
      </styled.h3>
      <styled.h4>
        Whats up
      </styled.h4>
    </Styled()>
  </Styled()>
</pure(CardPure)>
`;

exports[`test should render with a small size 1`] = `
<pure(CardPure)
  data={
    Object {
      "description": "Testing the frequency profile",
      "id": "asdf-123",
      "subtitle": "Whats up",
      "title": "Test frequency",
    }
  }
  size="small">
  <Styled()
    alignItems="center"
    justifyContent="flex-start">
    <Styled()
      direction="column"
      justifyContent="center">
      <styled.h3>
        Test frequency
      </styled.h3>
      <styled.h4>
        Whats up
      </styled.h4>
    </Styled()>
  </Styled()>
  <Styled()>
    <Styled()>
      Follow
    </Styled()>
  </Styled()>
</pure(CardPure)>
`;

exports[`test should render with no size 1`] = `
<pure(CardPure)
  data={
    Object {
      "description": "Testing the frequency profile",
      "id": "asdf-123",
      "subtitle": "Whats up",
      "title": "Test frequency",
    }
  }>
  <Styled()
    alignItems="center"
    justifyContent="flex-start">
    <Styled()
      direction="column"
      justifyContent="center">
      <styled.h3>
        Test frequency
      </styled.h3>
      <styled.h4>
        Whats up
      </styled.h4>
    </Styled()>
  </Styled()>
</pure(CardPure)>
`;
